Add Live Java Scratch Pad: eval arbitrary Java in the attached JVM - MSG_EVAL wire op + agent class-defining/output-teeing - SnippetCompiler: default-package wrapper, optional return, auto-imports - Completion: keywords, project + JDK classes, JDK member chains - Bump version